--- a/wiki/HaretConfig.wiki
+++ b/wiki/HaretConfig.wiki
@@ -1,3 +1,4 @@
+#labels Featured,Phase-Deploy
 # How to set up default.txt
 
 = Example of default.txt for n311=
@@ -6,7 +7,7 @@ set ramaddr 0x30000000
 
 set ramsize 0x04000000
 
-set kernel "zImage-n311-2"
+set kernel "zImage" # Fill the correct filename
 
 #set initrd "initrd.img.gz" # Choose it if you use /dev/ram as root (not recommended)
 
@@ -18,6 +19,6 @@ set bootspd 0
 
 set cmdline "root=/dev/mmcblk0p*_partitionnumber_* init=/sbin/init rootdelay=1" 
 
-#set cmdline "root=/dev/ram init=/sbin/init rootdelay=1"
+#set cmdline "root=/dev/ram init=/sbin/init" # May not work with big kernels
 
 bootlinux
