--- a/wiki/SdCardBoot.wiki
+++ b/wiki/SdCardBoot.wiki
@@ -2,15 +2,18 @@
 #labels Phase-Deploy
 
 = Introduction =
+Sometimes, when kernel is big enough, it fails to mount initrd. This seems to be the bootloader issue. In this case we place root filesystem on a card.
 
+== Formatting ==
 Format your SD card and make 2 partitions:
   #  FAT partition for storing HaRET, initrd and kernel.
   #  Ext2 or Ext3 partition for root filesystem.
 
 Then transfer the required files to the rootfs partition:
 
-  ##>cp -pR *from* path/to/second/partition
+  cp -pR path/to/rootfs path/to/second/partition
 
-You can transfer the contents of initrd.img.gz to the card. To do this, unarchive the file, then mount it:
 
-  ##>mount -o loop initrd.img /mnt/initrd
+You can transfer the contents of initrd.img.gz to the card. To do this, unarchive the file, mount it, and copy as above.
+
+  mount -o loop initrd.img /mnt/initrd
