Edited wiki page through web user interface.

--- a/wiki/SdCardBoot.wiki
+++ b/wiki/SdCardBoot.wiki
@@ -2,16 +2,24 @@
 #labels Phase-Deploy,Featured
 
 = Introduction =
-Sometimes, when kernel is big enough, it fails to mount initrd. This seems to be the bootloader issue. In this case we place root filesystem on a card.
+We need to place root filesystem on a card in two cases:
+
+  #1 Sometimes, when kernel is big enough, it fails to mount initrd. This seems to be the bootloader issue. In this case we place root filesystem on a card.
+  #2 We want to run complete system with GUI
 
 == Formatting ==
-Format your SD card and make 2 partitions:
-  #  FAT partition for storing HaRET, initrd and kernel.
-  #  Ext2 or Ext3 partition for root filesystem.
+Format your SD card and *make 2 partitions*:
+
+  #1 *FAT partition* for storing HaRET, initrd and kernel.
+  #2 *Ext3 partition* for root filesystem.
 
 Then transfer the required files to the rootfs partition:
 
-  cp -pR path/to/rootfs path/to/second/partition
+  # sudo tar -jxvf rootfs.tar.bz2 -C path/to/second/partition
+*or*
+  # tar -zxvf rootfs.tar.gz -C path/to/second/partition
+*or*
+  # sudo cp -pR path/to/rootfs path/to/second/partition
 
 
 You can transfer the contents of initrd.img.gz to the card. To do this, unarchive the file, mount it, and copy as above.
