Edited wiki page through web user interface.

--- a/wiki/PhotoPage.wiki
+++ b/wiki/PhotoPage.wiki
@@ -3,4 +3,5 @@
 
 == Frame buffer console ==
 
-|| <img src="http://acer-n311-linux.googlecode.com/svn/trunk/console_polachok.jpg" /> || <img src="http://acer-n311-linux.googlecode.com/svn/trunk/vga_console.jpg" /> || 
+|| <img src="http://acer-n311-linux.googlecode.com/svn/trunk/opie.jpg" /> || <img src="http://acer-n311-linux.googlecode.com/svn/trunk/console_polachok.jpg" /> || 
+|| <img src="http://acer-n311-linux.googlecode.com/svn/trunk/vga_console.jpg" /> || || 
