Edited wiki page through web user interface.

--- a/wiki/PhotoPage.wiki
+++ b/wiki/PhotoPage.wiki
@@ -1,7 +1,7 @@
 #summary Photos of Linux running on n311
 #labels n311,linux,photo,android
 
-== Frame buffer console ==
+== Photos by blondquirk and polachok ==
 
 || <img src="http://acer-n311-linux.googlecode.com/svn/trunk/opie.jpg" /> || || 
 ||  <img src="http://acer-n311-linux.googlecode.com/svn/trunk/console_polachok.jpg" /> || <img src="http://acer-n311-linux.googlecode.com/svn/trunk/vga_console.jpg" /> || 
