Edited wiki page through web user interface.

--- a/wiki/HardwareSupport.wiki
+++ b/wiki/HardwareSupport.wiki
@@ -7,9 +7,10 @@
 || Video || Works||
 || Touchscreen || Works ||
 || Buttons || Work ||
+|| Sound || Works ||
 || Battery || Not supported ||
 || Nand Flash|| Not supported ||
+|| Suspend/Resume || Not supported ||
 || Serial Port || Not tested ||
 || Bluetooth || Work in progress||
 || Wi-Fi || Work in progress ||
-|| Sound || Work in progress ||
